@@ -1,3 +1,8 @@
+2007-01-14 Richard Frith-Macdonald <rfm@gnu.org>
+
+	* Source/x11/XGGLContext.m: Fixup coordinates of subwindow for
+	bug report by Xavier Glattard.
+
 2006-12-31 Fred Kiefer <FredKiefer@gmx.de>
 	
 	* Source/cairo/CairoGState.m (-setOffset:, -DPSinitmatrix): Use
